Agregar tarifas por tiempo en productos
